--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -880,7 +880,7 @@
    "source": [
     "In general, **quantiles** divide the dataset into equal-sized intervals. An example of quantiles are the quartiles. The type of quantiles that divide the dataset into 100 equal parts are called **percentiles**. However, quantiles are often referred to as percentiles. \n",
     "\n",
-    "The 10th percentile is the element in the dataset that is less than or equal to 10% of the data. Also, 90% of the elements are greater than or equal to the 10th percentile. If there are two such elements in the dataset, then the 10th percentile is their arithmetic mean.\n",
+    "The 10th percentile is the value that is less than or equal to 10% of the data. Consequently, 90% of the elements are greater than or equal to the 10th percentile. \n",
     "\n",
     "`NumPy` and `pandas` provide functions for calculating quantiles. Examples for calculating 10th and 75th quantiles (percentiles) are shown in the next cells."
    ]
@@ -1775,11 +1775,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The linear regression model in `scikit-learn` can also be applied to `pandas` DataFrames, besides `NnmPy` arrays.\n",
+    "The linear regression model in `scikit-learn` can also be applied to `pandas` DataFrames, besides `NumPy` arrays.\n",
     "\n",
     "We will learn more about regression models in the subsequent lectures in this course. Here we covered an example of linear regression with one dependent and one independent variable, which is also referred to as *simple linear regression*, and is an example of a **univariate regression**. It is possible to consider multiple independent variables (e.g., using multiple input features) to predict another variable, referred to as **multiple regression**. And the problem of predicting the value of multiple dependent variables is called **multivariate regression**.\n",
     "\n",
-    "Besides linear regression models which fit a line to a dataset, there are numerous non-linear regression models that fit a non-linear model to a dataset. Later in the course we will study non-linear regression models, such as Random Forest regression model, Support Vector regression model, Neural Networks, and other models. "
+    "Besides linear regression models which fit a line to a dataset, there are numerous **non-linear regression** models that fit a non-linear model to a dataset. Later in the course we will study non-linear regression models, such as Random Forest regression model, Support Vector regression model, Neural Networks, and other models. "
    ]
   },
   {
@@ -2047,13 +2047,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **confidence interval** is a range of values derived from sample data and used to estimate the true population parameter. The **confidence level** represents the degree of uncertainty associated with the estimate. For example, a 90% confidence level means that if the same sampling process is repeated multiple times, the true population mean would fall within the upper and lower values of the confidence interval 90 out of 100 times.\n",
+    "A **confidence interval** is a range of values derived from sample data that provides an estimate of a population parameter. The **confidence level** represents the degree of certainty that the interval contains the true population pararameter. For example, a 90% confidence level indicates that if the same sampling process is repeated multiple times, approximately 90 out of 100 times the confidence intervals would contain the true population mean.\n",
     "\n",
-    "The confidence interval (CI) is calculated with the following formula.\n",
+    "The confidence interval (CI) for the population mean is calculated with the following formula.\n",
     "\n",
     "$\\text{CI} = \\bar{x} \\pm Z \\cdot \\frac{\\sigma}{\\sqrt{n}}$\n",
     "\n",
-    "In the formula, $\\bar{x}$ is the sample mean, $\\sigma$ is the population standard deviation, $n$ is the sample size, and $Z$ is the Z-score corresponding to the desired confidence level. Notice that the CI depends on the standard error of the mean ($\\text{SEM} = {\\sigma}/{\\sqrt{n}}$), and it can be written as $\\text{CI} = \\bar{x} \\pm Z \\cdot \\text{SEM}$."
+    "In the formula, $\\bar{x}$ is the sample mean, $\\sigma$ is the population standard deviation, $n$ is the sample size, and $Z$ is the Z-score corresponding to the desired confidence level. Notice that the CI depends on the standard error of the mean ($\\text{SEM} = {\\sigma}/{\\sqrt{n}}$), and it can also be written as $\\text{CI} = \\bar{x} \\pm Z \\cdot \\text{SEM}$."
    ]
   },
   {
@@ -2159,7 +2159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the population standard deviation $\\sigma\\$ is unknown, we can use the sample standard deviation to calculate the CI using the following formula:\n",
+    "If the population standard deviation $\\sigma$ is unknown, we can use the sample standard deviation $s$ to calculate the CI using the following formula:\n",
     "\n",
     "$\\text{CI} = \\bar{x} \\pm t \\cdot \\frac{s}{\\sqrt{n}}$\n",
     "\n",
@@ -2187,7 +2187,7 @@
     "sample_mean = np.mean(sample_data)\n",
     "# standard error of the mean\n",
     "sample_sem = scipy.stats.sem(sample_data)\n",
-    "# degrees of freedome\n",
+    "# degrees of freedom\n",
     "sample_df = len(sample_data)-1\n",
     "  \n",
     "# create 90% confidence interval \n",
@@ -2228,8 +2228,8 @@
     "\n",
     "Hypothesis testing involves two main hypotheses:\n",
     "\n",
-    "* Null Hypothesis ($H_0$): it is the default hypothesis that any observed changes are due to random chance. It serves as the baseline against which the alternative hypothesis is tested. For example, in a drug efficacy test, the null hypothesis can be \"The drug has no effect on patients.\"\n",
-    "* Alternative Hypothesis ($H_1$, or $H_a$): it is the opposite of the null hypothesis and suggests that there is an effect or a difference, and the observed changes are not due to random chance. For the example with the drug test, the alternative hypothesis can be \"The drug has a significant effect on patients.\"\n",
+    "* **Null Hypothesis** ($H_0$): it is the default hypothesis that any observed changes are due to random chance. It serves as the baseline against which the alternative hypothesis is tested. For example, in a drug efficacy test, the null hypothesis can be \"The drug has no effect on patients.\"\n",
+    "* **Alternative** Hypothesis ($H_1$, or $H_a$): it is the opposite of the null hypothesis and suggests that there is an effect or a difference, and the observed changes are not due to random chance. For the example with the drug test, the alternative hypothesis can be \"The drug has a significant effect on patients.\"\n",
     "\n",
     "In hypothesis testing, a low $p$-value (typically less than a significance level $\\alpha$, such as 0.05) results in rejecting the null hypothesis, suggesting that the alternative hypothesis may be true. Conversely, a high $p$-value indicates that the observed data is consistent with the null hypothesis, and there is insufficient evidence to reject the null hypothesis. \n",
     "\n",
