--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -1597,9 +1597,12 @@
     "\n",
     "The values $b_0$ and $b_1$ are *regression coefficients* and represent the intercept of the regression line with the y-axis and the slope of the line, respectively. The regression coefficients are also called the *weights* of the regression model. \n",
     "\n",
-    "A linear regression model estimates the values of the regression coefficients $b_0$ and $b_1$ for a given dataset. The objective is to find the set of regression coefficients so that for all data $x_i$, the obtained values from the regression equation for the variable $\\hat{y_i}$ are as close as possible to the actual values $y_i$. The variable `x` is called independent variable, or it is also called input variable, or observed variable. The variable `y` is called dependent variable, or predicted variable, or target variable, since the objective is to predict the values of `y` for given observations `x`.\n",
+    "A linear regression model estimates the values of the regression coefficients $b_0$ and $b_1$ for a given dataset, as shown in the figure below. The objective is to find the set of regression coefficients so that for all data $x_i$, the obtained values from the regression equation for the variable $\\hat{y_i}$ are as close as possible to the actual values $y_i$. The variable `x` is called independent variable, or it is also called input variable, or observed variable. The variable `y` is called dependent variable, or predicted variable, or target variable, since the objective is to predict the values of `y` for given observations `x`.\n",
     "\n",
-    "One common approach for calculating the regression coefficients is by minimizing the sum of the squared differences between the predicted values $\\hat{y_i}$ and actual values $y_i$, i.e., $\\sum_{i} (\\hat{y_i}-y_i)^2$ for $𝑖 = 1, 2, …, 𝑛$. This approach is called the method of *ordinary least squares*. The differences between the predicted values $\\hat{y_i}$ and actual values $y_i$ are also referred to as *residuals*."
+    "One common approach for calculating the regression coefficients is by minimizing the sum of the squared differences between the predicted values $\\hat{y_i}$ and actual values $y_i$, i.e., $\\sum_{i} (\\hat{y_i}-y_i)^2$ for $𝑖 = 1, 2, …, 𝑛$. This approach is called the method of *ordinary least squares*. The differences between the predicted values $\\hat{y_i}$ and actual values $y_i$ are also referred to as *residuals*.\n",
+    "\n",
+    "<img src=\"images/linear_regression.png\" width=\"600\">\n",
+    "<em>Figure: Linear regression.</em> Source: [7]."
    ]
   },
   {
@@ -2481,7 +2484,8 @@
     "3. Correlation Coefficients: Appropriate Use and Interpretation, by Patrick Schober, Christa Boer, and Lothar A Schwarte, available at: [https://pubmed.ncbi.nlm.nih.gov/29481436/](https://pubmed.ncbi.nlm.nih.gov/29481436/)\n",
     "4. Linear and Nonlinear Correlations, available at: [https://rovusa.com/quantitative-statistical-methods-and-data-science/linear-and-nonlinear-correlations/](https://rovusa.com/quantitative-statistical-methods-and-data-science/linear-and-nonlinear-correlations/).\n",
     "5. Mastering Statistical Analysis in Python with Real-World Datasets, by Ratan Kumar Sajja, available at: [https://python.plainenglish.io/mastering-statistical-analysis-in-python-with-real-world-datasets-d5b60e541189](https://python.plainenglish.io/mastering-statistical-analysis-in-python-with-real-world-datasets-d5b60e541189).\n",
-    "6. Applying Descriptive and Inferential Statistics in Python, by Cornellius Yudha Wijaya, available at: [https://www.kdnuggets.com/applying-descriptive-and-inferential-statistics-in-python](https://www.kdnuggets.com/applying-descriptive-and-inferential-statistics-in-python). "
+    "6. Applying Descriptive and Inferential Statistics in Python, by Cornellius Yudha Wijaya, available at: [https://www.kdnuggets.com/applying-descriptive-and-inferential-statistics-in-python](https://www.kdnuggets.com/applying-descriptive-and-inferential-statistics-in-python). \n",
+    "7. Linear Regression: A Comprehensive Guide, Analytics Vidhya, available at: [https://www.analyticsvidhya.com/blog/2021/10/everything-you-need-to-know-about-linear-regression/](https://www.analyticsvidhya.com/blog/2021/10/everything-you-need-to-know-about-linear-regression/)."
    ]
   },
   {
