--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -2231,12 +2231,20 @@
     "\n",
     "Hypothesis testing involves two main hypotheses:\n",
     "\n",
-    "* **Null Hypothesis** ($H_0$): it is the default hypothesis that any observed changes are due to random chance. It serves as the baseline against which the alternative hypothesis is tested. For example, in a drug efficacy test, the null hypothesis can be \"The drug has no effect on patients.\"\n",
-    "* **Alternative** Hypothesis ($H_1$, or $H_a$): it is the opposite of the null hypothesis and suggests that there is an effect or a difference, and the observed changes are not due to random chance. For the example with the drug test, the alternative hypothesis can be \"The drug has a significant effect on patients.\"\n",
+    "* **Null Hypothesis** ($H_0$): it is the default hypothesis that there is no change, difference, or effect in the value(s) of the studied statistic(s), and any observed result is due to random chance. It serves as the baseline against which the alternative hypothesis is tested. For example, in a drug efficacy test, the null hypothesis can be \"The drug has no effect on patients.\"\n",
+    "* **Alternative Hypothesis** ($H_1$, or $H_a$): it is the opposite of the null hypothesis, and suggests that there is a change, difference, or effect in the value(s) of the studied statistic(s), and the observed result is not due to random chance. For the example with the drug test, the alternative hypothesis can be \"The drug has a significant effect on patients.\"\n",
     "\n",
-    "In hypothesis testing, a low $p$-value (typically less than a significance level $\\alpha$, such as 0.05) results in rejecting the null hypothesis, suggesting that the alternative hypothesis may be true. Conversely, a high $p$-value indicates that the observed data is consistent with the null hypothesis, and there is insufficient evidence to reject the null hypothesis. \n",
+    "Therefore, the test evaluates two opposing hypotheses. Based on the results of the test, either the null hypothesis $H_0$ is rejected (suggesting that the alternate hypothesis $H_a$ is supported, and there is evidence of a difference), or the null hypothesis $H_0$ is not rejected (suggesting that the alternative hypothesis $H_a$ is not supported, and there is no evidence of a difference).\n",
     "\n",
-    "Several types of hypothesis tests are used depending on the given data and research question. Following are common hypothesis tests."
+    "To test the hypotheses, we need to select a **level of significance** of the test, typically denoted by $\\alpha$. Common choices for the level of significance are 1%, 5%, or 10%. In most practical tests, a level of significance equal to 5% ($\\alpha=0.05$) is selected. The level of significance represents the probability of making a Type I error, which occurs when the null hypothesis is rejected even though it is true. \n",
+    "\n",
+    "The value of $(1 − 𝛼)$ is called **confidence level**, and it represents the degree of certainty we have in our test results. For example, if $𝛼=0.05$ (5%), the corresponding confidence level is $1 − 0.05 = 0.95$ (95%), meaning that we are 95% confident that the observed results are not due to random chance. \n",
+    "\n",
+    "The output of a hypothesis test typically includes the value of the test statistics and a **significance probability**, commonly referred to as the **$p$-value**. If the $p$-value is less than or equal to the level of significance $\\alpha$ (e.g., 0.05), the null hypothesis is rejected. Conversely, if the $p$-value is greater than the level of significance $\\alpha$, this indicates that the observed data is consistent with the null hypothesis, and there is insufficient evidence to reject the null hypothesis. \n",
+    "\n",
+    "For example, if we select $\\alpha$ = 0.05 and the obtained $p$-value from the test is 0.1, we can conclude that we fail to reject the null hypothesis at the 95% confidence level. Or, we can say that there is a statistically significant difference between the population parameter and the sample statistic at the 95% confidence level.\n",
+    "\n",
+    "Several types of hypothesis tests are used depending on the given data and research question. The following are common hypothesis tests."
    ]
   },
   {
@@ -2512,7 +2520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
