--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the `INSERT` statement, we can also include the column names after the table name, as in `writer(FirstName,LastName,Year)`. This is not required, but it can reduce errors in entering the values for each column."
+    "In the `INSERT` statement, we can also include the column names after the table name, as in `writer (FirstName,LastName,Year)`. This is not required, but it can reduce errors in entering the values for each column."
    ]
   },
   {
@@ -550,9 +550,9 @@
    ],
    "source": [
     "%%sql \n",
-    "INSERT INTO writer(FirstName,LastName,Year) VALUES ('William', 'Shakespeare', 1616);\n",
-    "INSERT INTO writer(FirstName,LastName,Year) VALUES ('Lin', 'Han', 1996);\n",
-    "INSERT INTO writer(FirstName,LastName,Year) VALUES ('Peter', 'Brecht', 1978);"
+    "INSERT INTO writer (FirstName,LastName,Year) VALUES ('William', 'Shakespeare', 1616);\n",
+    "INSERT INTO writer (FirstName,LastName,Year) VALUES ('Lin', 'Han', 1996);\n",
+    "INSERT INTO writer (FirstName,LastName,Year) VALUES ('Peter', 'Brecht', 1978);"
    ]
   },
   {
@@ -2059,7 +2059,7 @@
     "\n",
     "We can also use the `SELECT` statement to display a list of all tables in the current database. Every SQLite database has an `sqlite_master` table that defines the schema for the database. The schema refers to the organization or structure of a database, and includes various elements such as tables and columns names, the relationships between tables, the types of data, and constraints (primary keys and foreign keys) used in the database. \n",
     "\n",
-    "The following statement uses `sqlite_master` with the `type` field is set to `'table'` to return the names of all tables in the current database."
+    "The following statement uses `sqlite_master` with the `type` field set to `'table'` to return the names of all tables in the current database."
    ]
   },
   {
@@ -5386,7 +5386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following are several examples of using logical operators. Note also that some of the operators (e.g., `ALL`, `ANY`, `EXISTS`, `SOME`) work only with subqueries, and examples will be presented in the subsequent section dedicated to working with subqueries. "
+    "Following are several examples of using logical operators. Note also that some of the operators (e.g., `ALL`, `ANY`, `EXISTS`, `SOME`) work only with subqueries, which are explained in a subsequent section dedicated to working with subqueries. "
    ]
   },
   {
@@ -9017,8 +9017,7 @@
    "source": [
     "%%sql \n",
     "SELECT \n",
-    "    department_name, MIN(salary) AS min_salary, MAX(salary) AS max_salary, \n",
-    "    ROUND(AVG(salary)) AS average_salary \n",
+    "    department_name, MIN(salary) AS min_salary, MAX(salary) AS max_salary, ROUND(AVG(salary)) AS average_salary \n",
     "FROM \n",
     "    employees \n",
     "INNER JOIN departments ON departments.department_id = employees.department_id \n",
@@ -9042,7 +9041,7 @@
    "source": [
     "### INSERT\n",
     "\n",
-    "`INSERT` is used to insert one or more rows into a table, and we already used it in subsection 10.3 when we created new tables. The general syntax is:\n",
+    "`INSERT` is used to insert one or more rows into a table, and we already used it in subsection 11.3 when we created new tables. The general syntax is:\n",
     "\n",
     "```\n",
     "INSERT INTO table (column1, column2,...)\n",
@@ -9103,8 +9102,7 @@
    ],
    "source": [
     "%%sql \n",
-    "INSERT INTO \n",
-    "    dependents (first_name, last_name, relationship, employee_id) \n",
+    "INSERT INTO dependents (first_name, last_name, relationship, employee_id) \n",
     "VALUES ('Dustin', 'Johnson', 'Child', 178);"
    ]
   },
@@ -9609,6 +9607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify the change."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
@@ -9904,8 +9909,6 @@
     }
    ],
    "source": [
-    "# verify the changes\n",
-    "\n",
     "%sql SELECT * FROM dependents"
    ]
   },
@@ -9924,7 +9927,7 @@
     "id": "pS0QOM6wWzZv"
    },
    "source": [
-    "In subsection 10.3 we learned how to use the `CREATE TABLE` statement. Several other related SQL statements for working with tables are described next."
+    "In subsection 11.3 we learned how to use the `CREATE TABLE` statement. Several other related SQL statements for working with tables are described next."
    ]
   },
   {
@@ -10649,10 +10652,10 @@
    "source": [
     "## 11.14 Constraints <a name='11.14-constraints'></a>\n",
     "\n",
-    "Constraints enforce restrictions on the data that a column can contain or impose other related restrictions. So far, we described some of the constraints used in SQL databases, such as:\n",
+    "Constraints impose rules that restrict the type of data a column can hold or establish other restrictions. So far, we described the following constraints used in SQL databases:\n",
     "\n",
     "- `PRIMARY KEY`, defines a primary key for a table.\n",
-    "- `NOT NULL`, ensures that values are inserted in a column.\n",
+    "- `NOT NULL`, ensures that values are inserted for all rows in a column.\n",
     "- `UNIQUE`, ensures that each row in a column has unique values. \n",
     "\n",
     "### FOREIGN KEY\n",
@@ -11406,13 +11409,13 @@
     "id": "90R-3ze3ecuY"
    },
    "source": [
-    "Recall again that when we created new tables in section 10.3 or a new database in section 10.4, we used `sqlite://` to connect to the tables or to the database. This syntax is used to specify an **in-memory** table or database, that is, it indicates that we want to work with tables or databases that exist only in the memory of our local machine. This syntax uses two forward slashes `//` after `sqlite:`.\n",
+    "Recall again that when we created new tables in section 11.3 or a new database in section 11.4, we used `sqlite://` to connect to the tables or to the database. This syntax is used to specify an **in-memory** table or database, that is, it indicates that we want to work with tables or databases that exist only in the memory of our local machine. This syntax uses two forward slashes `//` after `sqlite:`.\n",
     "\n",
     "To connect to an existing database that is stored in a local directory of our computer, we will use the syntax `sqlite:///relative_database_path`, where `relative_database_path` specifies the **relative path** to the local directory where the SQL database is stored. This syntax uses three forward slashes `///` after `sqlite:`.\n",
     "\n",
     "Similarly, we can connect to an existing database that is stored in a directory of our computer by using the **absolute path** to the database with the syntax `sqlite:////absolute_database_path`. This syntax uses four forward slashes `////` after `sqlite:`.\n",
     "\n",
-    "In the following cell, we used `sqlite:///data/EssentialSQL.db` to initialize the connection to the database `EssentialSQL.db` which is located in the `data` subdirectory in the current working directory.  "
+    "In the following cell, we use `sqlite:///data/EssentialSQL.db` to initialize the connection to the database `EssentialSQL.db` which is located in the `data` subdirectory in the current working directory.  "
    ]
   },
   {
