--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -1810,7 +1810,7 @@
    "source": [
     "##### 10.2.1.2 $R$-Squared Value (Coefficient of Determination)\n",
     "\n",
-    "**$R$-squared** value or **$R^2$** is also known as the **coefficient of determination**. R-Squared measures how well the independent variable (e.g., `hours`) explains the variability of the dependent (predicted) variable (`marks`, in this case). Its value ranges from 0 to 1, where 0 means that the variance in the predicted variable is not explained by the model, and indicates a poor regression fit. Conversely, 1 means that the variance in the predicted variable is well explained by the model, and indicates a good fit where the predicted exam marks are close to the actual values of the exam marks.\n",
+    "$R$**-Squared** value or $R^2$ is also known as the **coefficient of determination**. $R$-Squared measures how well the independent variable (e.g., `hours`) explains the variability of the dependent (predicted) variable (`marks`, in this case). Its value ranges from 0 to 1, where 0 means that the variance in the predicted variable is not explained by the model, and indicates a poor regression fit. Conversely, 1 means that the variance in the predicted variable is well explained by the model, and indicates a good fit where the predicted exam marks are close to the actual values of the exam marks.\n",
     "\n",
     "The coefficient of determination is calculated as: \n",
     "\n",
@@ -2520,7 +2520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
