--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -2242,7 +2242,7 @@
     "\n",
     "The output of a hypothesis test typically includes the value of the test statistics and a **significance probability**, commonly referred to as the $p$-value. If the $p$-value is less than or equal to the level of significance $\\alpha$ (e.g., 0.05), the null hypothesis is rejected. Conversely, if the $p$-value is greater than the level of significance $\\alpha$, this indicates that the observed data is consistent with the null hypothesis, and there is insufficient evidence to reject the null hypothesis. \n",
     "\n",
-    "For example, if we select $\\alpha$ = 0.05 and the obtained $p$-value from the test is 0.1, we can conclude that we fail to reject the null hypothesis at the 95% confidence level. Or, we can say that there is a statistically significant difference between the population parameter and the sample statistic at the 95% confidence level.\n",
+    "For example, if we select $\\alpha$ = 0.05 and the obtained $p$-value from the test is 0.1, we can conclude that we fail to reject the null hypothesis at the 95% confidence level. Or, we can say that there is no statistically significant difference between the population parameter and the sample statistic at the 95% confidence level.\n",
     "\n",
     "Several types of hypothesis tests are used depending on the given data and research question. The following are common hypothesis tests."
    ]
@@ -2254,7 +2254,7 @@
     "\n",
     "**One-Sample t-Test**\n",
     "\n",
-    "One-sample $t$-test is used to determine whether the mean of a sample is significantly different from a known value.\n",
+    "One-sample $t$-test is used to determine whether the mean of a population is significantly different from a specific value.\n",
     "\n",
     "The $t$-statistic is calculated as:\n",
     "\n",
@@ -2432,7 +2432,7 @@
    "source": [
     "**Chi-Square Test**\n",
     "\n",
-    "Chi-square test is used for categorical data to assess how likely it is that an observed distribution is due to chance.\n",
+    "Chi-square test is used for categorical data to assess how likely it is that observed frequencies in one or more chategories match expected frequencies.\n",
     "\n",
     "The test statistic is calculated as:\n",
     "\n",
