--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -2256,6 +2256,8 @@
     "\n",
     "One-sample $t$-test is used to determine whether the mean of a population is significantly different from a specific value.\n",
     "\n",
+    "For instance, a pharmaceutical company claims that a new drug lowers blood pressure on average by 10 mmHg. The drug can be administered to 20 patients and measure their blood pressure. A one-sample $t$-test can be used to determine if the measured pressure of the patients is statistically different from the expected reduction of 10 mmHg.\n",
+    "\n",
     "The $t$-statistic is calculated as:\n",
     "\n",
     "$t = \\frac{\\bar{x} - \\mu_0}{\\frac{s}{\\sqrt{n}}}$\n",
@@ -2328,6 +2330,8 @@
     "\n",
     "This test is used to compare the means of two independent samples.\n",
     "\n",
+    "For example, a medical study aims to compare the blood pressure of two groups of patients, consisting of people under 40 and over 60. A two-sample $t$-test can be used to determine if there is a statistically significant difference in the average blood pressure between the two groups of patients. \n",
+    "\n",
     "The $t$-statistic is calculated as:\n",
     "\n",
     "$t = \\frac{\\bar{x}_1 - \\bar{x}_2}{\\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}}$\n",
@@ -2381,6 +2385,8 @@
     "\n",
     "Paired $t$-test is used to compare the means of two related groups. For instance, when we have two measurements taken on the same sample or matched pairs before and after an intervention or change.\n",
     "\n",
+    "For example, the same group of patients undergoes a new treatment for 8 weeks, and their blood pressure levels are measured before and after the treatment. A paired $t$-test can be used to determine if there is a statistically significant difference in the measured blood pressure levels before and after the treatment. \n",
+    "\n",
     "The $t$-statistic is calculated as:\n",
     "\n",
     "$t = \\frac{\\bar{d}}{\\frac{s_d}{\\sqrt{n}}}$\n",
@@ -2432,7 +2438,9 @@
    "source": [
     "**Chi-Square Test**\n",
     "\n",
-    "Chi-square test is used for categorical data to assess how likely it is that observed frequencies in one or more chategories match expected frequencies.\n",
+    "Chi-square test is used for categorical data to assess how likely it is that observed frequencies in one or more categories match expected frequencies.\n",
+    "\n",
+    "For example, a political researcher has collected tabular data with voting preferences for two candidates. The researcher can use a chi-square test to examine if the gender of the voters (male vs female) is associated with their voting preference for the two candidates.\n",
     "\n",
     "The test statistic is calculated as:\n",
     "\n",
