--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
@@ -5361,15 +5361,21 @@
     "\n",
     "We can also use logical operators to combine multiple conditions in the `WHERE` clause of an SQL statement. The following table contains the SQL logical operators.\n",
     "\n",
-    "<img src=\"images/logical_operators.png\" width=\"600\">\n",
-    "<em>Figure source: Reference [1].</em>"
+    "| **Operator** | **Meaning**                                                   |\n",
+    "|--------------|---------------------------------------------------------------|\n",
+    "| **<span style=\"color:blue\">AND</span>**      | Returns true if **both** expressions are true.                |\n",
+    "| **<span style=\"color:blue\">BETWEEN</span>**  | Returns true if the operand is within a specified **range**.  |\n",
+    "| **<span style=\"color:blue\">OR</span>**       | Returns true if **either** expression is true.                |\n",
+    "| **<span style=\"color:blue\">LIKE</span>**     | Returns true if the operand **matches a pattern**.            |\n",
+    "| **<span style=\"color:blue\">IN</span>**       | Returns true if the operand is **equal** to one of the values in a list. |\n",
+    "| **<span style=\"color:blue\">NOT</span>**      | Reverses the result of any other Boolean operator.            |\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following are several examples of using logical operators. Note also that some of the operators (e.g., `ALL`, `ANY`, `EXISTS`, `SOME`) work only with subqueries, which are explained in a subsequent section dedicated to working with subqueries. "
+    "Following are several examples of using logical operators. "
    ]
   },
   {
