--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-SQL/Lecture_11-SQL.ipynb
@@ -9049,6 +9049,8 @@
     "VALUES (value1, value2, ...);\n",
     "```\n",
     "\n",
+    "The primary data types supported by SQLite include INTEGER (integer numbers), REAL (floating-point numbers), TEXT (string of characters), VARCHAR (variable-length string with a defined maximum length), CHAR (string with a fixed length), BOOLEAN (True or False), NULL (absence of a value), and BLOB (binary large object, for storing binary data like images of files). \n",
+    "\n",
     "For instance, to insert a new row into the `dependents` table, we can use the following code. The new row will be added to the bottom of the table `dependents`."
    ]
   },
