--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-Data_Exploration/Lecture_11-Data_Exploration_and_Preprocessing.ipynb)\n",
-    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_2-Data_Engineering/Lecture_11-Data_Exploration/Lecture_11-Data_Exploration_and_Preprocessing.ipynb) "
+    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb)\n",
+    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Theme_2-Data_Engineering/Lecture_12-Data_Exploration/Lecture_12-Data_Exploration_and_Preprocessing.ipynb) "
    ]
   },
   {
@@ -2550,7 +2550,7 @@
     "\n",
     "In general, we can try both strategies and check which one produces better results with the classification algorithm. \n",
     "\n",
-    "After dropping the rows with missing values, 712 rows are remaining in the dataset. The method `reset_index` will change the index column to range from 0 to 711. If we didn't reset the index column, the index values would have still ranged from 0 to 891."
+    "After dropping the rows with missing values, 712 rows remain in the dataset. The method `reset_index` will change the index column to range from 0 to 711. If we didn't reset the index column, the index values would have still ranged from 0 to 891."
    ]
   },
   {
@@ -2869,7 +2869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we mentioned earlier, although the `pandas` library provides some functionality for plotting directly from DataFrames, thereprint(titanic.dtypes) are other plotting libraries that provide improved graphs. A few plots created with `Seaborn` are shown below. "
+    "As we mentioned earlier, although the `pandas` library provides some functionality for plotting directly from DataFrames, other plotting libraries provide improved graphs. A few plots created with `Seaborn` are shown below. "
    ]
   },
   {
@@ -3503,7 +3503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check the original and the normalized fetures."
+    "Let's check the original and the normalized features."
    ]
   },
   {
@@ -3821,7 +3821,7 @@
     "\n",
     "With some machine learning algorithms the performance will be the same with features scaling using normalization or standardization, but with other algorithms, there can be a difference in the performance. If it is feasible, we can try both feature scaling techniques, especially if we are not sure about the distribution of the data.  \n",
     "\n",
-    "Standardization is implemented in `scikit-learn` with `StandardScaler`. Similar to `MinMaxScaler`, we can either use the syntax `scaler.fit_transform(data)` or the syntax with `scaler.fit(data)` and `scaler.transform(data)`. We will explain the difference between these two  syntaxes in more details in the next lectures when we will introduce the concepts of training and testing datasets."
+    "Standardization is implemented in `scikit-learn` with `StandardScaler`. Similar to `MinMaxScaler`, we can either use the syntax `scaler.fit_transform(data)` or the syntax with `scaler.fit(data)` and `scaler.transform(data)`.  A brief explanation of the differences between these two syntaxes is provided in Section 12.4 below, and we will provide an additional explanation in the next lecture when we introduce the concepts of training and testing datasets."
    ]
   },
   {
@@ -4881,7 +4881,7 @@
     "\n",
     "Label encoding is used to encode categorical values in the target label column with the `LabelEncoder` in scikit-learn.\n",
     "\n",
-    "In this case, the target label column `survived` has numerical values, and it does not need to be encoded. Therefore, let's apply the `LabelEncoder` to the `embark_town` column, although that column in not the target column for our classification problem."
+    "In this case, the target label column `survived` has numerical values, and it does not need to be encoded. Therefore, let's apply the `LabelEncoder` to the `embark_town` column, although that column is not the target column for our classification problem."
    ]
   },
   {
@@ -5119,7 +5119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although `Label Encoder` is similar to `Ordinal Encoder`, there are a few differences between the two functions. First, `Label Encoder` can handle only a single columns at a time since it is assumed that there is one target variable, while `Ordinal Encoder` can encode multiple columns at the same time. Also, the output of `Label Encoder`  are integer labels, and the output of `Ordinal Encoder` are floating-point numbers. The reason is that some ML algorithms require that the labels are integers, although most algorithms can accept both integers or floats as labels. "
+    "Although `Label Encoder` is similar to `Ordinal Encoder`, there are a few differences between the two functions. First, `Label Encoder` can handle only a single column at a time since it is assumed that there is one target variable, while `Ordinal Encoder` can encode multiple columns at the same time. Also, the output of `Label Encoder` is integer labels, and the output of `Ordinal Encoder` is floating-point numbers. The reason is that some ML algorithms require that the labels are integers, although most algorithms can accept both integers or floats as labels. "
    ]
   },
   {
@@ -5419,7 +5419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Concatenate the `dummies` DataFrame to `titanic` and drp the column `sex`."
+    "Concatenate the `dummies` DataFrame to `titanic` and drop the column `sex`."
    ]
   },
   {
@@ -6564,7 +6564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's apply standard scaling to the training and test datasets. Notice here that we apply `fit()` only to the training dataset, then `transform()` to the training dataset, and we apply only `transform()` to the test dataset. The reason for it is that if we applied `fit` or `fit_transform` to the test dataset, we would learn some information about the test set (e.g., we can learn what are the maximum and minimum values in the test dataset). However, it is assumed that the machine learning algorithm learns only from the training dataset, and that during the training, the model does not have access to the test dataset. I.e., it is said that the model \"sees\" only the training dataset during fitting the model to the data, and the test dataset is \"unseen\" during the model fitting phase. This will be explained again in the next lecture."
+    "Let's apply standard scaling to the training and test datasets. Notice here that we apply `fit()` only to the training dataset, then `transform()` to the training dataset, and we apply only `transform()` to the test dataset. The reason for this is that if we applied `fit` or `fit_transform` to the test dataset, we would learn some information about the test set (e.g., we can learn the maximum and minimum values in the test dataset). However, it is assumed that the machine learning algorithm learns only from the training dataset, and that during the training, the model does not have access to the test dataset. I.e., it is said that the model \"sees\" only the training dataset during fitting the model to the data, and the test dataset is \"unseen\" during the model fitting phase. This will be explained again in the next lecture."
    ]
   },
   {
